--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "helmet": "^4.1.1",
+    "helmet": "^4.2.0",
     "path-to-regexp": "^6.2.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
-    "@types/express": "^4.17.8",
-    "@types/helmet": "0.0.48",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.12.0",
+    "@types/express": "^4.17.9",
+    "@types/helmet": "^4.0.0",
+    "@types/jest": "^26.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
+    "eslint": "^7.13.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^6.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   }
 }
